# server1

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  findexp.sh  generate.sh  license
cmake/: build_proto.cmake  build_recastnavigation.cmake  find_package.cmake  set_cmake_flag.cmake
config/: clear.sh  start.sh  stop.sh
dep/: CMakeLists.txt  REDEME.md
dep/cmake-3.19.2-Linux-x86_64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
dep/cmake-3.19.2-Linux-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
dep/cmake-3.19.2-Linux-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
dep/protobuf3.14.0_build/include/google/protobuf/: descriptor.h  duration.proto  timestamp.pb.h  timestamp.proto  type.proto
dep/protobuf3.14.0_build/lib/: libprotobuf-lite.la  libprotobuf.la  libprotoc.la
dep/protobuf3.14.0_build/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
examples/: CMakeLists.txt
examples/protobuf/: CMakeLists.txt
examples/protobuf/rpc/: CMakeLists.txt  client.cc  client2.cpp  server.cc  server2.cc  sudokuservice.cpp  sudokuservice.h  sudokuservice_stub.cpp  sudokuservice_stub.h
examples/simple/: CMakeLists.txt
examples/simple/echo/: echo_server.cpp  echo_server.h  main.cpp
examples/simple/helloworld/: main.cpp
muduo/base/: CMakeLists.txt
muduo/base/common/: async_logging.cpp  condition.cpp  condition.h  copyable.h  count_down_latch.cpp  count_down_latch.h  current_thread.cpp  current_thread.h  date.cpp  date.h  exception.cpp  file_util.cpp  logging.cpp  logging.h  mutex.h  noncopyable.h  process_info.cpp  process_info.h  string_piece.h  threadpool.h  time_stamp.h  weak_callback.h
muduo/base/define/: define_variable.h
muduo/base/tests/: asynclogging_test.cpp
muduo/net/: CMakeLists.txt
muduo/net/common/: buffer.cpp  connector.cpp  connector.h  eventloop.cpp  eventloop_thread.cpp  socket.cpp  socket.h  tcp_connection.cpp  tcp_connection.h  timer.h  timer_queue.cpp  timerid.h
muduo/net/poller/: epoll_poller.cpp
muduo/net/protobuf/: CMakeLists.txt  ProtobufCodecLite.cc  ProtobufCodecLite.h
muduo/net/protorpc/: CMakeLists.txt  RpcChannel.cc  RpcChannel.h  RpcCodec.cc  RpcCodec.h  RpcCodec_test.cc  RpcServer.cc  RpcServer.h  RpcService.cc  RpcService.h  cpp_service.cc  cpp_service.h  gen.cc  rpcservice.proto  service.h
myproto/include/: down_pointer_cast.h  dynamic_object.h  noncopyable.h  service.h
myproto/include/message/: scene.pb.cc  scene.pb.h  user.pb.cc  user.pb.h
myproto/include/message/common/: rpc.pb.cc  rpc.pb.h
myproto/include/message/test/: rpcservice.pb.cc  rpcservice.pb.h  sudoku.pb.cc  sudoku.pb.h  test.pb.cc  test.pb.h  xCmd.pb.cc  xCmd.pb.h
myproto/include/service/: c2g_scene.pb.cc  c2g_scene.pb.h  c2g_user.pb.cc  c2g_user.pb.h  g2c_scene.pb.cc  g2c_scene.pb.h  service_enum.pb.cc  service_enum.pb.h  service_include.pb.cc  service_include.pb.h
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/common/: mgr_base.h  mgr_base_config.cpp  singleton.h  tool_protobuf.cpp  tool_protobuf.h  tvarlist.h  xentry.h
src/base/define/: define_event.h  define_new.h  define_service.h  define_types.h  define_variable.h
src/base/mgr/: create_dynamic.h  create_service.h  mgr_base.h  mgr_dynamicfactory.cpp  mgr_dynamicfactory.h  mgr_event.cpp  mgr_event.h  mgr_event_global.cpp  mgr_event_global.h  mgr_event_scene.cpp  mgr_event_scene.h  mgr_message.cpp  mgr_message.h
src/base/muduo/base/: CMakeLists.txt
src/base/muduo/base/common/: async_logging.cpp  async_logging.h  atomic.h  count_down_latch.h  current_thread.h  date.h  exception.cpp  exception.h  file_util.h  (+18 more)
src/base/muduo/net/: CMakeLists.txt
src/base/muduo/net/protorpc/: CMakeLists.txt  RpcChannel.cc  RpcChannel.h  RpcCodec.cc  RpcCodec.h  RpcCodec_test.cc  RpcServer.cc  RpcServer.h  RpcService.h  rpc.proto
src/base/server/: server.cpp  server.h  server_args.h
src/gameserver/: CMakeLists.txt  gameserver.cpp  gameserver.h  main.cpp
src/gameserver/entity/: define_entity.h  entity_dynamic.cpp  entity_dynamic.h  mgr_entity.cpp  mgr_entity.h
src/gameserver/rpc/: a2g_user.cpp  a2g_user.h  c2g_scene.cpp  c2g_scene.h  c2g_user.cpp  c2g_user.h  g2c_scene_stub.cpp  g2c_scene_stub.h
src/gameserver/scene/: assets.h  define_scene.h  mgr_pathfinding_config.cpp  mgr_pathfinding_config.h  mgr_scene.cpp  mgr_scene.h  scene.cpp  scene.h  scene_cfg.h
src/gameserver/user/: define_user.h  mgr_user.cpp  mgr_user.h  user.cpp  user.h
src/gateserver/: CMakeLists.txt  c2a_user.cpp  c2a_user.h  gateserver.cpp  gateserver.h  main.cpp  mgr_user.cpp  mgr_user.h  rpcchannel_gate.cpp  rpcchannel_gate.h  user.cpp  user.h
src/gateserver/rpc/: a2g_user_stub.cpp  a2g_user_stub.h  c2a_user.cpp  c2a_user.h
src/navmesh/: CMakeLists.txt
src/navmesh/Include/: ChunkyTriMesh.h  CrowdTool.h  NavMeshTesterTool.h  OffMeshConnectionTool.h  Sample.h  SampleInterfaces.h  Sample_SoloMesh.h  Sample_TempObstacles.h  Sample_TileMesh.h  imgui.h  imguiRenderGL.h
src/navmesh/Source/: ConvexVolumeTool.cpp  CrowdTool.cpp  Filelist.cpp  InputGeom.cpp  NavMeshPruneTool.cpp  NavMeshTesterTool.cpp  OffMeshConnectionTool.cpp  Sample.cpp  SampleInterfaces.cpp  Sample_SoloMesh.cpp  Sample_TempObstacles.cpp  Sample_TileMesh.cpp  TestCase.cpp  ValueHistory.cpp  imgui.cpp
src/navmesh/include/: ConvexVolumeTool.h  Filelist.h  InputGeom.h  NavMeshPruneTool.h  NavMeshTesterTool.h  Sample.h  SampleInterfaces.h  Sample_Debug.h  Sample_TempObstacles.h  TestCase.h  ValueHistory.h  pathfinding.h  pathfinding_tool.h
src/navmesh/source/: ChunkyTriMesh.cpp  MeshLoaderObj.cpp  NavMeshTesterTool.cpp  SampleInterfaces.cpp  Sample_Debug.cpp  imguiRenderGL.cpp  pathfinding.cpp  pathfinding_tool.cpp
类图/: rpcserver1.drawio
(+1791 files in other folders)
